Fix double scrollbar

--- a/packages/webawesome/docs/assets/styles/docs.css
+++ b/packages/webawesome/docs/assets/styles/docs.css
@@ -253,7 +253,7 @@ wa-button.delete {
 }
 
 wa-page::part(menu) {
-  scrollbar-width: thin;
+  overflow: unset;
 }
 
 /* smaller viewports-based navigation */
